# http-auth-basic

./: .gitignore  CHANGELOG  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: clippy.yml  grcov.yml  release.yml
src/: credentials.rs  error.rs  lib.rs
